Fix alignment in header

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,4 +1,4 @@
-$yellow: #FFCD29 ;
+$yellow: #FFCD29;
 $white: #EEEEEE;
 $blue: #222831;
 $darkgrey: #393E46;
@@ -13,11 +13,13 @@ $lightgrey: #D9D9D9;
         background-color: #222831;
         height: 100%;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
 
         .walletContainer {
             display: flex;
             flex-direction: row;
+            width: 30px;
+            margin-left: 15px;
 
             .wallet {
                 color: white;
@@ -33,6 +35,7 @@ $lightgrey: #D9D9D9;
 
         .logoHeader {
             width: 100px;
+            justify-self: center;
         }
 
         .hamburger {
@@ -43,6 +46,7 @@ $lightgrey: #D9D9D9;
             width: 30px;
             height: 35px;
             margin-top: 2rem;
+            margin-right: 15px;
         }
 
         .top-bun,
